Changement de titre

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="appSokoban" ng-controller="ctrlSokoban" on-keyup>
 	<head>
-		<title>Angular Sokoban</title>
+		<title>Sokoban</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" type="text/css" media="all" href="css/main.css">
 		<script type="text/javascript" src="js/angular.min.js"></script>
@@ -48,7 +48,7 @@
 			<button ng-click="findSolution()" id="btnSolution">Calculer la solution</button>
 		</p>
 		
-		
+		{{yo}}
 
 	
 		
