added pircutres not on the right way

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
                              	                        
         	                        <table class="casess">
                                         <tr ng-repeat="cases in casess" class="cases">
+                                        	<script> console.log("row	");</script>
                                             <td ng-repeat="case in cases" class="case">
-                                                <div class="terre"  ng-show="case.terre"></div>
+                                                <div  background-image: url("../img/numbers/number14.jpg'"); 
+                                               </div>
                                                 <div class="mur"    ng-show="case.mur"></div>
-                                                <div class="socle"  ng-show="case.socle"></div>
+                                               <!--  <div class="socle"  ng-show="case.socle"></div>
                                                 <div class="bloc"   ng-show="case.bloc"></div>
-                                                <div class="perso"  ng-show="case.perso"></div>
+                                                <div class="perso"  ng-show="case.perso"></div> -->
                                             </td>
                                         </tr>
                                     </table>
