tru to set the pictures

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                         <tr ng-repeat="cases in casess" class="cases">
                                         	<script> console.log("row	");</script>
                                             <td ng-repeat="case in cases" class="case">
-                                                <div  background-image: url("../img/numbers/number14.jpg'"); 
+                                              <!--   <div>  <img src="img/numbers/number1.jpg" style="width: 100%;max-height: 100%" >  -->
                                                </div>
                                                 <div class="mur"    ng-show="case.mur"></div>
                                                <!--  <div class="socle"  ng-show="case.socle"></div>
